# data-sync-engine

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: sync_config.yaml
config/mappings/: airtable_to_quickbooks.yaml  shopify_to_airtable.yaml  shopify_to_quickbooks.yaml
docs/plans/: 2026-03-08-data-sync-engine.md
scripts/: demo.py  demo_conflict.py  demo_reconcile.py  seed_data.py
src/: app.py  config.py  exceptions.py  models.py
src/connectors/: airtable.py  base.py  quickbooks.py  shopify.py
src/reconciliation/: reconciler.py  reporter.py
src/services/: __init__.py  ai.py  database.py
src/storage/: sync_store.py
src/sync/: change_detector.py  conflict_resolver.py  engine.py  scheduler.py
src/transform/: converter.py  mapper.py  validator.py
tests/: conftest.py  test_api.py  test_change_detector.py  test_conflict_resolver.py  test_connectors.py  test_engine.py  test_mapper.py  test_reconciler.py
workflows/: data_sync.json
